fixed CSS file link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Jaira McNair's CSD 340 Landing Page </title>
 
-        <link href="css/site.css" type="text/css" rel="stylesheet"/> <!-- CSS file link -->
+        <link href="site.css" type="text/css" rel="stylesheet"/> <!-- CSS file link -->
 
         <!-- Beginning of Google Font Kit Links -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
