--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3> Module Assignments </h3>
             <ul>
                 <li><a href="module-2/mcnair_EX1.html"> Assignment 2.2 </a></li>
-                <li><a href="module-3/mcnair_EX2.css"> Assignment 3.2 </a></li>
+                <li><a href="module-3/mcnair_EX2.html"> Assignment 3.2 </a></li>
                 <li><a href="module-4/mcnair_EX3.html">Assignment 4.3 </a></li>
             </ul>
 
