--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="module-2/mcnair_EX1.html"> Assignment 2.2 </a></li>
                 <li><a href="module-3/mcnair_EX2.html"> Assignment 3.2 </a></li>
                 <li><a href="module-4/mcnair_EX3.html">Assignment 4.3 </a></li>
+                <li><a href="module-5/mcnair_EX4.html"> Assignment 5.2 </a></li>
             </ul>
 
             <h3> Projects </h3>
