--- a/module-12/my_landing.html
+++ b/module-12/my_landing.html
@@ -39,6 +39,7 @@
                 <table id="biotable">
                     <tr>
                         <td id="bioimage"> <img id="portrait" src="images/portrait.png"> </td>
+                        <td> </td>
                         <td id="bioparagraph"> <p><h3 style="font-size:1.5">Hello all!</h3> <p style="font-size:1.1vw;" class="inner-p">I'm Jaira McNair. Born in North Carolina and raised in Southwestern Virginia, I have called
                         the south eastern United States home for all of my life. My childhood was full of horses, hay bales, creeks, and southern cooking. My sophomore year of highschool, I found an
                         interest in the idea being able to code. Nearly four years later, I decided to take a computer science class at my local community college
@@ -63,20 +64,23 @@
                 <h1 style="font-size:1.4vw;"> Hobbies </h1>
             </div>
             <div class="card" id="hobbies">
-                <table>
+                <table id="hobby-table">
                     <tr> 
                         <td>
-                            <img id="hobby" src="images/hobby.jpg">
+                            <img id="hobby" src="images/hobby3.jpg">
                         </td>
                         <td> 
-                            <p id="cooking-outer"> <h3 style="font-size:1.5"> Cooking </h3> <p class="inner-p" style="font-size:1.1vw;">Cooking is one of my favorite hobbies. I love food and I think that it plays a huge role in our lives. I believe that the 
+                            <p id="cooking-outer"> <h3 style="font-size:1.5vw"> Cooking </h3> <p class="inner-p" style="font-size:1.1vw;">Cooking is one of my favorite hobbies. I love food and I think that it plays a huge role in our lives. I believe that the 
                             foods we consume affect our overall health and well-being, so I take eating the right foods seriously. To me, cooking is an art; and like any art-form cooking 
-                             takes time and lots of practice.  
+                             takes time, dedication and lots of practice.   
                             </p></p>
                         </td>
                         <td> 
                             <img id="hobby2" src="images/hobby2.jpg">
                         </td>
+                        <td> <p id="other-hobbies"> <h3 style="font-size:1.5vw;"> Other Hobbies </h3> <p class="inner-p" style="font-size:1.1vw;"> Some of my other hobbies include: 
+                        <ul id="hobby-list"> <li> Volleyball </li> <li> Swimming </li> <li> Coding </li> <li> Bike riding </li></ul>
+                        </p></p></td>
                     </tr>
                 </table>
             </div>
