--- a/module-12/my_landing.html
+++ b/module-12/my_landing.html
@@ -24,10 +24,10 @@
 
             <div class="header" id="nav">
                 <ul id="nav-list">
-                    <li style="font-size:1.1vw;"><a href="#bio"> Bio </a></li>
-                    <li style="font-size:1.1vw;"><a href="#contact"> Contact Me </a></li>
-                    <li style="font-size:1.1vw;"><a href="#hobbies"> Hobbies </a></li>
-                    <li style="font-size:1.1vw;"><a href="#experience"> Work Experience </a></li>
+                    <li style="font-size:1.1vw;"><a href="#bio-sec"> Bio </a></li>
+                    <li style="font-size:1.1vw;"><a href="#contact-sec"> Contact Me </a></li>
+                    <li style="font-size:1.1vw;"><a href="#hobbies-sec"> Hobbies </a></li>
+                    <li style="font-size:1.1vw;"><a href="#work-sec"> Accomplishments and Work Experience </a></li>
                 </ul>
             </div>
 
@@ -45,6 +45,7 @@
                         interest in the idea being able to code. Nearly four years later, I decided to take a computer science class at my local community college
                         and I fell in love. I am now attending Bellevue University on the journey to obtaining my Bachelor's in Software Development. 
                         </p></p></td>
+                        <td> </td>
                     </tr>
                 </table>
 
@@ -69,17 +70,20 @@
                         <td>
                             <img id="hobby" src="images/hobby3.jpg">
                         </td>
+                        <td> </td>
                         <td> 
                             <p id="cooking-outer"> <h3 style="font-size:1.5vw"> Cooking </h3> <p class="inner-p" style="font-size:1.1vw;">Cooking is one of my favorite hobbies. I love food and I think that it plays a huge role in our lives. I believe that the 
                             foods we consume affect our overall health and well-being, so I take eating the right foods seriously. To me, cooking is an art; and like any art-form cooking 
                              takes time, dedication and lots of practice.   
                             </p></p>
                         </td>
+                        <td> </td>
                         <td> 
                             <img id="hobby2" src="images/hobby2.jpg">
                         </td>
+                        <td> </td>
                         <td> <p id="other-hobbies"> <h3 style="font-size:1.5vw;"> Other Hobbies </h3> <p class="inner-p" style="font-size:1.1vw;"> Some of my other hobbies include: 
-                        <ul id="hobby-list"> <li> Volleyball </li> <li> Swimming </li> <li> Coding </li> <li> Bike riding </li></ul>
+                        <ul id="hobby-list"> <li> Volleyball </li> <li> Swimming </li> <li> Coding </li> </ul>
                         </p></p></td>
                     </tr>
                 </table>
@@ -90,7 +94,7 @@
                 <h1 style="font-size:1.4vw;"> Accomplishments and Work Experience  </h1>
             </div>
             <div class="card" id="work">
-                <table>
+                <table id="work-table">
                     <tr>
                         <td> <img id="target" src="images/target.png" > 
                             <img id="nhs" src="images/nhs.png">
@@ -100,6 +104,17 @@
                 </table>
 
             </div>
+
+            <br />
+        <br />
+
+        <footer>
+            <a id="btt-link" href="#nav" > Back to top </a>
+            <p id="fp"> 
+                <a href="https://www.bellevue.edu/" target="_blank"> Bellevue University </a> 
+                &copy; <script>document.write(new Date().getFullYear());</script>
+            </p>
+        </footer>
 
         </div>
     </body>
