--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <li><a href="module-7/mcnair_EX5.html"> Assignment 7.2 </a></li>
                 <li><a href="module-9/mcnair_EX6.html"> Assignment 9.2 </a></li>
                 <li><a href="module-11/assignment-11.2.html"> Assignment 11.2 </a></li>
-                <li> <a href="module-12/my_landing.html"> Assignment 12.3 </a></li>
+                <li><a href="module-12/my_landing.html"> Assignment 12.3 </a></li>
             </ul>
 
             <h3> Projects </h3>
             <ul>
-                <li><a href="#"> bioSite Project Homepage </a></li>
-                <li><a href="#"> Final Exam </a></li>
+                <li><a href="../BioSite/index.html"> bioSite Project Homepage </a></li>
+                <li><a href="module-12/my_landing.html"> Final Exam </a></li>
             </ul>
 
             <h4> Important Links </h4>
