--- a/module-12/my_landing.html
+++ b/module-12/my_landing.html
@@ -83,7 +83,7 @@
                         </td>
                         <td> </td>
                         <td> <p id="other-hobbies"> <h3 style="font-size:1.5vw;"> Other Hobbies </h3> <p class="inner-p" style="font-size:1.1vw;"> Some of my other hobbies include: 
-                        <ul id="hobby-list"> <li> Volleyball </li> <li> Swimming </li> <li> Coding </li> </ul>
+                        <ul id="hobby-list"> <li style="font-size:1.1vw;"> Volleyball </li> <li style="font-size:1.1vw;"> Swimming </li> <li style="font-size:1.1vw;"> Coding </li> </ul>
                         </p></p></td>
                     </tr>
                 </table>
